--- a/package.json
+++ b/package.json
@@ -16,11 +16,15 @@
     "@emotion/core": "^10.0.14",
     "gatsby": "^2.13.15",
     "gatsby-plugin-emotion": "^4.1.2",
+    "gatsby-plugin-sass": "^2.1.3",
     "gatsby-plugin-typography": "^2.3.2",
     "gatsby-source-filesystem": "^2.1.5",
     "gatsby-transformer-remark": "^2.6.4",
+    "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-helmet": "^5.2.1",
+    "react-particles-js": "^2.6.0",
     "react-typography": "^0.16.19",
     "typography": "^0.16.19",
     "typography-theme-fairy-gates": "^0.16.19",
