--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
+    "react-icons": "^3.7.0",
     "react-particles-js": "^2.6.0",
+    "react-typed": "^1.1.2",
     "react-typography": "^0.16.19",
     "typography": "^0.16.19",
     "typography-theme-fairy-gates": "^0.16.19",
