--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
   },
   "dependencies": {
     "@emotion/core": "^10.0.14",
+    "@material-ui/core": "^4.3.3",
+    "child_process": "^1.0.2",
+    "fs": "0.0.1-security",
     "gatsby": "^2.13.15",
     "gatsby-plugin-emotion": "^4.1.2",
     "gatsby-plugin-sass": "^2.1.3",
@@ -30,7 +33,8 @@
     "react-typography": "^0.16.19",
     "typography": "^0.16.19",
     "typography-theme-fairy-gates": "^0.16.19",
-    "typography-theme-kirkham": "^0.16.19"
+    "typography-theme-kirkham": "^0.16.19",
+    "xmlhttprequest": "^1.8.0"
   },
   "devDependencies": {
     "prettier": "^1.18.2"
