--- a/package.json
+++ b/package.json
@@ -13,23 +13,25 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\""
   },
   "dependencies": {
-    "@emotion/core": "^10.0.14",
-    "@material-ui/core": "^4.3.3",
+    "@emotion/core": "^10.0.27",
+    "@material-ui/core": "^4.9.0",
     "child_process": "^1.0.2",
     "fs": "0.0.1-security",
-    "gatsby": "^2.13.15",
-    "gatsby-plugin-emotion": "^4.1.2",
-    "gatsby-plugin-sass": "^2.1.3",
-    "gatsby-plugin-typography": "^2.3.2",
-    "gatsby-source-filesystem": "^2.1.5",
-    "gatsby-transformer-remark": "^2.6.4",
-    "node-sass": "^4.12.0",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
+    "gatsby": "^2.19.8",
+    "gatsby-plugin-emotion": "^4.1.21",
+    "gatsby-plugin-sass": "^2.1.27",
+    "gatsby-plugin-typography": "^2.3.21",
+    "gatsby-remark-katex": "^3.1.24",
+    "gatsby-source-filesystem": "^2.1.46",
+    "gatsby-transformer-remark": "^2.6.50",
+    "katex": "^0.11.1",
+    "node-sass": "^4.13.1",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
-    "react-icons": "^3.7.0",
-    "react-particles-js": "^2.6.0",
-    "react-typed": "^1.1.2",
+    "react-icons": "^3.8.0",
+    "react-particles-js": "^2.7.0",
+    "react-typed": "^1.2.0",
     "react-typography": "^0.16.19",
     "typography": "^0.16.19",
     "typography-theme-fairy-gates": "^0.16.19",
@@ -37,7 +39,7 @@
     "xmlhttprequest": "^1.8.0"
   },
   "devDependencies": {
-    "prettier": "^1.18.2"
+    "prettier": "^1.19.1"
   },
   "repository": {
     "type": "git",
